--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "identifi-cli",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Command line interface for Identifi",
   "homepage": "https://github.com/identifi/identifi-cli",
   "author": {
@@ -34,6 +34,7 @@
     "load-grunt-tasks": "^1.0.0",
     "time-grunt": "^1.0.0",
     "grunt-mocha-cli": "^1.11.0",
+    "grunt-release": "^0.9.0",
     "jshint-stylish": "^1.0.0"
   },
   "scripts": {
