--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "chai": "^2.3.0",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
-    "identifi-lib": "^0.0.5"
+    "identifi-lib": "^0.0.5",
+    "moment": "^2.12.0",
+    "node-emoji": "^1.2.1"
   },
   "devDependencies": {
     "grunt-cli": "^0.1.13",
