--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "colors": "^1.1.2",
     "commander": "^2.8.1",
     "identifi-lib": "^0.0.14",
+    "inquirer": "^1.0.2",
     "lodash": "^4.7.0",
     "moment": "^2.12.0",
     "node-emoji": "^1.2.1"
