--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "inquirer": "^1.0.2",
     "lodash": "^4.7.0",
     "moment": "^2.12.0",
-    "node-emoji": "^1.2.1"
+    "node-emoji": "^1.2.1",
+    "os-homedir": "^1.0.1"
   },
   "devDependencies": {
     "grunt-cli": "^0.1.13",
