--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "os-homedir": "^1.0.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-nodeunit": "^0.4.1",
